src/pages/home/home.css
.home {
  display: flex;
  flex-direction: column;
  align-content: center;
  position: relative;
  width: 100%;
  overflow-y: auto;
  z-index: 2;
  background-color: var(--secondary);
  color: var(--tertiary);
}
/* 
.home .main .title{
  display: flex;
  flex-direction: row;
  column-gap: -80px;
} */
.home .main .title .titleleft{
 z-index: 30;
}

.home .main .title .titleleft h1{
  margin-left: 80px;
  margin-top: 60px;
  width: 905px;
  font-size: 35px;
  font-weight: bold;
  line-height: 43px;
}
.home .main .title .titleleft div{
  width: 509px;
  height: 91px;
  font-size: 20px;
  margin-left:242px;
  margin-top:60px;
  line-height: 35px;
}

/* .home .main .title .titleright{
  height: 100px;
} */

.home .main .title .titleright img{
  
  margin-left: 730px;
  margin-top: -400px;
}
.home .main .whoarewe{
  margin:60px;
  height:400px;
}
.home .main .whoarewe h1{
  margin-bottom: 50px;
  font-size: 35px;
  font-weight: bold;
  line-height: 43px;
 
}
.home .main .who{
  display: flex;
  flex-direction: row;
  gap:270px
}
.home .main .whoarewe h2{
 margin-bottom:50px;
}
.home .main .who .whoLeft, .home .main .who .whoRight{
  width: 570px;
}
.home .main .who .whoLeft p , .home .main .who .whoRight p{
  font-size: 20px;
  line-height: 35px;

}

/* .home>.main>.title {
  display: flex;
  flex-direction: column;
  align-items: center;
} */
/* 
.home>.main>.title>img {
  width: 600px;
  /* mix-blend-mode: darken; 
} */

#after {
  position: relative;
  display: flex;
  justify-content: space-between;
  gap: 10px;
}

.home>.hero {
  background-image: url('../../images/homepage 1.png');
  aspect-ratio: 16 / 9;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  background-position: center;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  max-height: 100vh;
  margin-top: -50px;
}

.home>.hero>h2 {
  color: whitesmoke !important;
  font-size: 40px;
  width: 1101px;
  height: 127px;
  /* margin-top: -50px; */
  /* margin: 1rem; */
  /* margin-top: 5rem; */
  text-shadow: 2px 2px 2px #444444;
  font-weight: bold;
  line-height: 70px;
}

.home>.hero>.btns {
  display: flex;
  flex-direction: column;
  gap: 5px;
  align-items: center;
  justify-content: center;
}

.home>.hero>.btns>button {
  
  padding: 15px 42px;
  border: 2px solid var(--primary);
  background-color: var(--primary);
  color: var(--secondary);
 margin-top: 50px;
  width: 275px;
  height:64px;
  font-size: 27px;
  cursor: pointer;
  transition: .4s;
  position: relative;
  display: flex;
  align-items: center;
  border-radius: 10px;
}

@keyframes swing {
  from {
    right: 13%;
  }

  to {
    right: 10%
  }
}

.home>.hero>.btns>button::after {
  content: ">";
  margin-left: auto;
  position: absolute;
  font-weight: 500;
  font-size: 1.2rem;
  animation-name: swing;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
  animation-direction: alternate;
}



.home>.hero>.btns>button:hover {
  background-color: rgba(255, 255, 255, 0.237);
  border: 2px solid var(--secondary);
  backdrop-filter: blur(4px);
}

.home>.main {
  /* padding: 2rem; */
  display: flex;
  flex-direction: column;
  gap: 3rem;
  background-color: var(--secondary);
}

/* .home .title h2 {
  text-align: center;
} */

/* .whyus h2 {
  margin: 25px 16px;
} */

/* .whyusimgs{
  display: grid;
  margin-top: 10px;
  grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
  gap:60px;
} */

.whyus .why {
  display: flex;
  flex-direction: row;
  gap: 20px;
  width: 400px;
  height: 150px;
  margin: 20px;
  justify-content: center;
}

.whyus .why .imgg img {
  /* height: 200px;
 width:200px; */
  height: 100px;
  width: 100px;
  object-fit: contain;
  margin-top: 25%;
  mix-blend-mode: darken;
}

.pp {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 150px;

  font-size: 27px;
}


/* --------------------------------------------dropdown ------------------------------------ */

.dropbtn {
  /* background-color: #4CAF50; */
  color: var(--tertiary);
  padding: 16px;
  /* font-size: 16px; */
  border: none;
  cursor: pointer;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  /* display: inline; */
  width: fit-content;
  margin-bottom: 20px
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1; */
}

/* Links inside the dropdown */
.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
  background-color: #f1f1f1
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
  display: block;
}





/* ------------------------------------------------------------------------------------------------------------ */

.accredation{
  width: 1175px;
  height: 150px;
  border:1px solid;
  margin-top:-75px;
  z-index: 10;
  align-self: center;
  position: relative;
  background: linear-gradient( #727984, #ffffff) ;
  /* filter: blur; */
  backdrop-filter: blur(10px); 
  border-radius: 20px;
 display: flex;
 

}
.accredation .img{
position: absolute;
margin-left: 45%;
margin-top: 25px;
}
.accredation h1{
  margin-top: 50px;
  margin-left:100%;
  letter-spacing: 1px;
  

}
.accredation .img img{
  width: 100px;
  height: 100px;
  margin-left:50px;
  filter: drop-shadow(0px 2px 7px #464545);

}
/* ------------------------------------------------------------------------------------------------------------------------------------------------------- */

.collab{
margin-left: 60px;
margin-bottom: 30px;
}
.collab h1 {
  margin-bottom: 40px;
  font-size: 35px;
  font-weight: bold;
  line-height: 43px;
}
/* ... */

